# flappy_bird

./: CMakeLists.txt  README.md
src/: AssetManager.cpp  AssetManager.h  Bird.cpp  Bird.h  Collision.cpp  Collision.h  Flash.cpp  Flash.h  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HUD.cpp  HUD.h  InputManager.cpp  InputManager.h  Land.cpp  Land.h  MainMenuState.cpp  MainMenuState.h  Pipe.cpp  Pipe.h  State.h  StateMachine.cpp  StateMachine.h  main.cpp
